subnet.tf
resource "aws_subnet" "public" {
  vpc_id                  = aws_vpc.Deploy.id
  cidr_block              = var.public_subnet_cidr
  map_public_ip_on_launch = "true"

}

resource "aws_subnet" "private" {
  vpc_id     = aws_vpc.Deploy.id
  cidr_block = var.private_subnet_cidr

}
